# self-calibrating-chip

./: .gitignore  README.md  binary_tree_matrix.py  calibration_simulation.py  example_advanced.py  example_basic.py  ideal_response_generator.py  photonic_fir_chip.py  pyproject.toml  requirements.txt
config/: calibration_config.yaml
docs/: mzi_amplitude_calibration_sim.html  photonic_fir_interactive.html  ps_phase_calibration_sim.html
experiment/: __init__.py  batch_mzi_scan.py  batch_mzi_scan_refactored.py  batch_ps_scan.py  convert_logging.py  crosstalk_matrix.py  easy_voltage_control.py  equipment-test.py  example_phi_init_characterisation.py  extract_tap_coefficients.py  gap_method_demo.py  main_expt.py  measure_spectrum.py  mzi_crosstalk_analysis.py  mzi_init_phase_characterisation.py  phi_init.py  phi_init_characterisation.py  process_dataframe.py  ps_crosstalk_analysis.py  run_calibration.py  run_ps_batch_scan.py  scan_common.py  scan_v2pi.py  test_config.py  test_conn.py  test_scripts.py  test_voltage_channel.py
experiment/config/: __init__.py  _delete_me.py  data_structure.py  error_calculation.py  example_usage.py  measure_spectrum.py  power_splitting_ratio.py  recover_tap_coefficients.py  voltage_adjustment.py
experiment/utils/: __init__.py  extract_tap_coefficients.py  measure_spectrum.py  psr_error.py  splitting_ratio_error.py  (+3 more)
simulation/: __init__.py  calibration_simulator.py  compare_spectrum.py  example_advanced.py  fir_response.py  ideal_response_generator.py  photonic_fir_chip.py  photonic_fir_simulator.py  power_splitting_ratio.py
(+32 files in other folders)
