[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photonic-fir"
version = "0.1.0"
description = "Self-calibrating programmable photonic FIR filter"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Kok-Wei Bong", email = "kok-wei.bong@monash.edu"}
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "pyyaml>=5.4",
    "fiberlabs-edfa",
    "luna-ova",
    "voltage-ctrl",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
photonic_fir = ["py.typed"]